--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -11,10 +11,10 @@
     <i class="fa fa-cog" ></i>
   </span> Masters</a>
   <ul class="c-sidebar-nav-dropdown-items">
-    <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Country" routerLinkActive="active"> Country</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/State" routerLinkActive="active"> State</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/City" routerLinkActive="active"> City</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Location" routerLinkActive="active"> Location</a></li>
+    <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Country" routerLinkActive="router-link-active"> Country</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/State" routerLinkActive="router-link-active"> State</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/City" routerLinkActive="router-link-active"> City</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Location" routerLinkActive="router-link-active"> Location</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Company</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Designation</a></li>
   </ul>
