--- a/src/app/Master/location/location.component.html
+++ b/src/app/Master/location/location.component.html
@@ -1,6 +1,6 @@
 <div class="app-body">
-    <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"></button>
-   
+  <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"> <i class="fa fa-bars" aria-hidden="true"></i></button>
+ 
     <main class="mainContainer" [@changeDivSize]=currentState>
   <div class="animated fadeIn ">
    
@@ -23,7 +23,7 @@
           <div class="card-body">
       
         <ag-grid-angular
-        style="width: 100%; height: 410px;"
+        style="width: 100%; height: 480px;"
         class="ag-theme-alpine"
         [rowData]="bindgrid"
         [columnDefs]="columnDefs">
