--- a/src/app/Master/test-master/test-master.component.html
+++ b/src/app/Master/test-master/test-master.component.html
@@ -1,5 +1,5 @@
 <div class="app-body">
-  <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"></button>
+  <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"> <i class="fa fa-bars" aria-hidden="true"></i></button>
  
   <main class="mainContainer" [@changeDivSize]=currentState>
 <div class="animated fadeIn ">
