--- a/src/app/pos-sidebar/pos-sidebar.component.html
+++ b/src/app/pos-sidebar/pos-sidebar.component.html
@@ -8,11 +8,11 @@
 
               <div class="row mb-2">
                 <div class="menuListing">
-                <div id="setupMenu">
+                <div class="setupMenu">
 
                     <div class="row">
                    <div class="col-md-6 col-sm-6 col-6">
-                      <div class="masterTabs " id="dvdefineRestro">
+                      <div class="masterTabs active">
                        
                           <img src="assets/images/definerest.png" />
                           <span>Define Restaurant</span> 
