--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/State" routerLinkActive="router-link-active"> State</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/City" routerLinkActive="router-link-active"> City</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Location" routerLinkActive="router-link-active"> Location</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Company</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Company" routerLinkActive="router-link-active"> Company</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Designation</a></li>
   </ul>
   </li>
