--- a/src/app/Master/company/company.component.html
+++ b/src/app/Master/company/company.component.html
@@ -1,6 +1,5 @@
 <div class="app-body">
-  <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"></button>
- 
+  <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"> <i class="fa fa-bars" aria-hidden="true"></i></button>
   <main class="mainContainer" [@changeDivSize]=currentState>
 <div class="animated fadeIn ">
  
@@ -25,7 +24,7 @@
         <div class="card-body">
     
       <ag-grid-angular
-      style="width: 100%; height: 410px;"
+      style="width: 100%; height: 470px;"
       class="ag-theme-alpine"
       [rowData]="rowData"
       [columnDefs]="columnDefs">
