--- a/src/app/pos-sidebar/pos-sidebar.component.css
+++ b/src/app/pos-sidebar/pos-sidebar.component.css
@@ -8,6 +8,11 @@
     border: 1px solid #cdcdcd;
     padding: 2px;
     cursor: pointer;
+    height:80px;
+}
+.menuList{
+    width: 50%;
+    padding: 0px;
 }
 .active{background: #c6cac6;}
 .highlightspan{color:#ffffff}
