--- a/src/app/pos-sidebar/pos-sidebar.component.html
+++ b/src/app/pos-sidebar/pos-sidebar.component.html
@@ -10,56 +10,56 @@
                 <div class="menuListing">
                 <div class="setupMenu">
 
-                    <div class="row">
-                   <div class="col-md-6 col-sm-6 col-6">
+                    <div class="row m-0">
+                   <div class="menuList">
                       <div class="masterTabs active">
                        
-                          <img src="assets/images/definerest.png" />
+                          <img src="assets/images/defineRestaurant.png" />
                           <span>Define Restaurant</span> 
                        
                        </div>
                        </div>
-                        <div class="col-md-6 col-sm-6 col-6"> 
-                          <div class="masterTabs" id="dvSectionTable">
+                        <div class="menuList"> 
+                          <div class="masterTabs">
                           
-                              <img src="assets/images/definerest.png" />
+                              <img src="assets/images/sectionTable.png" />
                                <span>Section Table</span> 
                             
                             </div>
                            </div>
                           </div>
 
-                          <div class="row">
-                            <div class="col-md-6 col-sm-6 col-6"> 
+                          <div class="row m-0">
+                            <div class="menuList"> 
                               <div class="masterTabs">
-                                  <img src="assets/images/definerest.png" />
+                                  <img src="assets/images/menuCreation.png" />
                                     <span>Menu Creation</span>
                                   
                                    </div>
                                    </div>
-                                    <div class="col-md-6 col-sm-6 col-6">
+                                    <div class="menuList">
                                        <div class="masterTabs" id="dvdefineempdetails">
                                        
-                                          <img src="assets/images/definerest.png" />
+                                          <img src="assets/images/empDetails.png" />
                                               <span>Employee Details</span> 
                                            
                                            </div>
                                            </div>
                                           </div>
 
-                                          <div class="row">
-                                            <div class="col-md-6 col-sm-6 col-6">
+                                          <div class="row m-0">
+                                            <div class="menuList">
                                                <div class="masterTabs"> 
                                                 
-                                                  <img src="assets/images/definerest.png" />
+                                                  <img src="assets/images/kitchenSection.png" />
                                                    <span>Kitchen Section</span>
                                                    
                                                    </div>
                                                    </div> 
-                                                   <div class="col-md-6 col-sm-6 col-6">
+                                                   <div class="menuList">
                                                       <div class="masterTabs">
                                                        
-                                                          <img src="assets/images/definerest.png" />
+                                                          <img src="assets/images/addOns.png" />
                                                             <span style="width:100%;">Add-ons</span> 
                                                          
                                                         </div>
@@ -75,55 +75,55 @@
 
 
 
-                                                      <div class="row">
-                                                          <div class="col-md-6 col-sm-6 col-6">
+                                                      <div class="row m-0">
+                                                          <div class="menuList">
                                                              <div class="masterTabs"> 
                                                               
-                                                                <img src="assets/images/definerest.png" />
+                                                                <img src="assets/images/newOrder.png" />
                                                                  <span>New Order</span>
                                                                  
                                                                  </div>
                                                                  </div> 
-                                                                 <div class="col-md-6 col-sm-6 col-6">
+                                                                 <div class="menuList">
                                                                     <div class="masterTabs">
                                                                      
-                                                                        <img src="assets/images/definerest.png" />
+                                                                        <img src="assets/images/kitchenScreen.png" />
                                                                           <span style="width:100%;">Kitchen Screen</span> 
                                                                        
                                                                       </div>
                                                                      </div> 
                                                                     </div>
-                                                                    <div class="row">
-                                                                        <div class="col-md-6 col-sm-6 col-6">
+                                                                    <div class="row m-0">
+                                                                        <div class="menuList">
                                                                            <div class="masterTabs"> 
                                                                             
-                                                                              <img src="assets/images/definerest.png" />
+                                                                              <img src="assets/images/customerLoyalty.png" />
                                                                                <span>Customer Loyalty</span>
                                                                                
                                                                                </div>
                                                                                </div> 
-                                                                               <div class="col-md-6 col-sm-6 col-6">
+                                                                               <div class="menuList">
                                                                                   <div class="masterTabs">
                                                                                    
-                                                                                      <img src="assets/images/definerest.png" />
+                                                                                      <img src="assets/images/runningOrder.png" />
                                                                                         <span style="width:100%;">Running Orders</span> 
                                                                                      
                                                                                     </div>
                                                                                    </div> 
                                                                                   </div>  
-                                                                    <div class="row">
-                                                                        <div class="col-md-6 col-sm-6 col-6">
+                                                                    <div class="row m-0">
+                                                                        <div class="menuList">
                                                                            <div class="masterTabs"> 
                                                                             
-                                                                              <img src="assets/images/definerest.png" />
+                                                                              <img src="assets/images/cardActivation.png" />
                                                                                <span>Card Activation</span>
                                                                                
                                                                                </div>
                                                                                </div> 
-                                                                               <div class="col-md-6 col-sm-6 col-6">
+                                                                               <div class="menuList">
                                                                                   <div class="masterTabs">
                                                                                    
-                                                                                      <img src="assets/images/definerest.png" />
+                                                                                      <img src="assets/images/customerCoupon.png" />
                                                                                         <span style="width:100%;">Customer Coupon</span> 
                                                                                      
                                                                                     </div>
