--- a/src/app/Master/section-table/section-table.component.css
+++ b/src/app/Master/section-table/section-table.component.css
@@ -41,6 +41,7 @@
     padding: 5px;
     color: #fff;
 }
+.sectionBox  img{width:100%}
 .carddiv{padding:10px}
 .sectionBox {
     padding: 0px 2px 1px;
