--- a/src/app/Master/section-table/section-table.component.html
+++ b/src/app/Master/section-table/section-table.component.html
@@ -22,9 +22,9 @@
         
 
           <div class="sectionBox active headtblbox" >
-            <img src="assets/images/definerest.png" />
+          <img src="../../../assets/images/family copy.png" />
             <h6>Family section</h6></div><div class="sectionBox headtblbox" >
-              <img src="assets/images/definerest.png" />
+              <img src="../../../assets/images/Terrace.png"/>
               <h6>Terrace</h6>  
             </div>
             </div>
