--- a/src/app/Master/location/location.component.html
+++ b/src/app/Master/location/location.component.html
@@ -14,9 +14,10 @@
             <div class="col-md-6 heading"> Location Master</div>
             <div class="col-md-6">
               <div class="btnCon">
-                <button class="btn btn-sm btn-primary" type="button" ><i class="fa fa-file-excel-o pr-1"></i>Export to Excel</button>
-              <button class="btn btn-sm btn-primary" type="button" data-toggle="modal" data-target="#testForm"><i class="fa fa-plus pr-1"></i>New</button>
-            </div>
+                <button class="btn btn-sm btn-main" type="button" ><i class="fa fa-file-excel-o pr-1"></i></button>
+         
+                <button class="btn btn-sm btn-main" type="button" data-toggle="modal" data-target="#testForm"><i class="fa fa-plus pr-1"></i></button>
+              </div>
           </div>
             </div>
           </div>
