--- a/src/app/Master/city/city.component.html
+++ b/src/app/Master/city/city.component.html
@@ -14,17 +14,17 @@
           <div class="col-md-6 heading"> City Master</div>
           <div class="col-md-6">
             <div class="btnCon">
-              <button class="btn btn-sm btn-primary" type="button" ><i class="fa fa-file-excel-o pr-1"></i>Export to Excel</button>
+              <button class="btn btn-sm btn-main" type="button" ><i class="fa fa-file-excel-o pr-1"></i></button>
          
-            <button class="btn btn-sm btn-primary" type="button" data-toggle="modal" data-target="#testForm"><i class="fa fa-plus pr-1"></i>New</button>
-          </div>
+            <button class="btn btn-sm btn-main" type="button" data-toggle="modal" data-target="#testForm"><i class="fa fa-plus pr-1"></i></button>
+         </div>
         </div>
           </div>
         </div>
         <div class="card-body">
     
       <ag-grid-angular
-      style="width: 100%; height: 410px;"
+      style="width: 100%; height: 480px;"
       class="ag-theme-alpine"
       [rowData]="bindgrid"
       [columnDefs]="columnDefs">
