--- a/src/app/Master/state/state.component.html
+++ b/src/app/Master/state/state.component.html
@@ -14,9 +14,9 @@
           <div class="col-md-6 heading"> State</div>
           <div class="col-md-6">
             <div class="btnCon">
-                <button class="btn btn-sm btn-primary" type="button" ><i class="fa fa-file-excel-o pr-1"></i>Export to Excel</button>
+               <button class="btn btn-sm btn-main" type="button" ><i class="fa fa-file-excel-o pr-1"></i></button>
          
-            <button class="btn btn-sm btn-primary" type="button" data-toggle="modal" data-target="#testForm"><i class="fa fa-plus pr-1"></i>New</button>
+            <button class="btn btn-sm btn-main" type="button" data-toggle="modal" data-target="#testForm"><i class="fa fa-plus pr-1"></i></button>
           </div>
         </div>
           </div>
@@ -24,7 +24,7 @@
         <div class="card-body">
     
       <ag-grid-angular
-      style="width: 100%; height: 410px;"
+      style="width: 100%; height: 480px;"
       class="ag-theme-alpine"
       [rowData]="rowData"
       [columnDefs]="columnDefs">
