--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 <app-sidebar *ngIf="showSideNav" class="sidebar" ></app-sidebar>
 <app-sidebar-minimizer (click)=toggleNav() style="display: none;"></app-sidebar-minimizer>
-<app-pos-sidebar></app-pos-sidebar>
+<app-pos-sidebar *ngIf="showPOSNav"></app-pos-sidebar>
 <router-outlet></router-outlet>
 
  <app-footer ></app-footer> 
