--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
     <span class="c-sidebar-nav-icon"> <i class="fa fa-tachometer " ></i></span>
    Dashboard</a></li>
   
-  <li class="c-sidebar-nav-title">Human Resources</li>
+  <!-- <li class="c-sidebar-nav-title">Human Resources</li> -->
   <li class="c-sidebar-nav-dropdown"><a class="c-sidebar-nav-dropdown-toggle" href="#">
   <span class="c-sidebar-nav-icon">
     <i class="fa fa-cog" ></i>
@@ -16,7 +16,7 @@
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/City" routerLinkActive="router-link-active"> City</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Location" routerLinkActive="router-link-active"> Location</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Company" routerLinkActive="router-link-active"> Company</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Designation</a></li>
+  
   </ul>
   </li>
   <li class="c-sidebar-nav-dropdown"><a class="c-sidebar-nav-dropdown-toggle" href="#">
