--- a/src/app/Master/employee-details/employee-details.component.html
+++ b/src/app/Master/employee-details/employee-details.component.html
@@ -8,13 +8,58 @@
       <div class="card-header">
         <div class="row">
           
-        <div class="col-md-6 heading"> Restaurant</div>
+        <div class="col-md-6 heading">Employee Details</div>
        
         </div>
       </div>
     <div class="mainLogo">
-        <img class="restLogo" src="assets/images/restaurant_icon.png">
+      <div class="row boxpos">
+        <div class="boxwidth">
+          <div class="usercrdbox">
+              <img _ngcontent-c5="" src="assets/images/user1.png" class="userimage">
+          <div class="form-group row nomarginbtm">
+            <label class="col-md-5 col-form-label">Employee Code</label>
+            <div class="col-md-7"><p class="form-control-static">4653316</p></div>
+        </div>
+        <div class="form-group row nomarginbtm">
+          <label class="col-md-5 col-form-label">Name</label>
+          <div class="col-md-7"><p class="form-control-static">Naman</p></div>
+      </div>
+      <div class="form-group row nomarginbtm">
+        <label class="col-md-5 col-form-label">Mobile</label>
+        <div class="col-md-7"><p class="form-control-static">8459026781</p></div>
+    </div>
+    <div class="form-group row nomarginbtm">
+      <label class="col-md-5 col-form-label">Email</label>
+      <div class="col-md-7"><p class="form-control-static">n@gmail.com</p></div>
+  </div>
+  <div class="form-group row nomarginbtm">
+    <label class="col-md-5 col-form-label">Kitchen Section Name</label>
+    <div class="col-md-7"><p class="form-control-static">Screen</p></div>
+</div>
+<div class="form-group row nomarginbtm">
+  <label class="col-md-5 col-form-label">Restro Name</label>
+  <div class="col-md-7"><p class="form-control-static">Bake Dine-in</p></div>
+</div>
+<div class="form-group row nomarginbtm">
+<label class="col-md-5 col-form-label">User Pin</label>
+<div class="col-md-7"><p class="form-control-static">465465</p></div>
+</div>
+<div class="form-group row nomarginbtm">
+<label class="col-md-5 col-form-label">Role</label>
+<div class="col-md-7"><p class="form-control-static">Restro Admin</p></div>
+</div>
+</div>
+
+
+
+            </div>
         
+               </div>
+               <div class="card-footer">
+                  <button class="btn btn-sm btn-primary" type="submit"><i class="fa fa-sign-out"></i>Exit</button>
+                
+              </div>
         
         
     </div>
