--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,8 @@
 body{overflow-x:hidden}
 button:focus{outline:0px !important}
-p {
+p, label {
     font-family: 'Roboto';
-    font-weight: 500;
+    font-weight: 400;
 }
 .card-body{padding-bottom: 0px !important;
     padding: 0.525rem !important;
