--- a/src/app/Master/define-restaurant/define-restaurant.component.css
+++ b/src/app/Master/define-restaurant/define-restaurant.component.css
@@ -12,6 +12,9 @@
     border-radius: 2px;
     
 }
+
+.restrohead{width: 120%;
+    margin-left: -9%;}
 .tablebox[_ngcontent-c7] {
     display: inline-block;
     width: 12%;
