--- a/src/app/Master/define-restaurant/define-restaurant.component.html
+++ b/src/app/Master/define-restaurant/define-restaurant.component.html
@@ -15,26 +15,26 @@
     
       <div class="row boxpos">
         <div class="col-md-4 col-sm-6 col-6">
-           <div class="masterTabs dvdefineRestro active">
+           <div class="masterTabs dvdefineRestro ">
             
-               <img src="assets/images/create.png" />
+               <img src="assets/images/create-icon.png" />
                <p>CREATE</p> 
             
             </div>
             </div>
              <div class="col-md-4 col-sm-6 col-6"> 
-               <div class="masterTabs dvdefineRestro">
+               <div class="masterTabs dvdefineRestro  active">
                
-                   <img src="assets/images/edit.png" />
+                   <img src="assets/images/update-icon.png" />
                     <p>UPDATE</p> 
                  
                  </div>
                 </div>
                 <div class="col-md-4 col-sm-6 col-6" data-toggle="modal" data-target="#exampleModalLong"> 
-                  <div class="masterTabs dvdefineRestro">
+                  <div class="masterTabs dvdefineRestro active">
                   
-                      <img src="assets/images/deliveryblack.png" />
-                       <p>UPDATE RESTAURANT DETAILS</p> 
+                      <img src="assets/images/updateRestaurant-icon.png" />
+                       <p class="restrohead">UPDATE RESTAURANT DETAILS</p> 
                     
                     </div>
                    </div>
